[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-zerogpu"
version = "0.2.0"
description = "LangChain tools for ZeroGPU: A compute-efficient inference provider for apps and agents — purpose-built small and nano language models on an edge network that run the repeatable tasks frontier models shouldn’t, ~10x faster and 50%+ cheaper. Auto-scaling, with zero GPU infrastructure. Plug in and you’re live."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [{ name = "ZeroGPU", email = "support@zerogpu.ai" }]
keywords = [
    "langchain",
    "zerogpu",
    "llm",
    "tools",
    "nlp",
    "classification",
    "ner",
    "pii",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3.0,<2.0.0",
    "zerogpu-api>=0.1.3,<0.2.0",
]

[project.urls]
Homepage = "https://github.com/zerogpu/langchain-zerogpu"
Repository = "https://github.com/zerogpu/langchain-zerogpu"
Documentation = "https://docs.zerogpu.ai"
Changelog = "https://github.com/zerogpu/langchain-zerogpu/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/zerogpu/langchain-zerogpu/issues"

[dependency-groups]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-socket>=0.7.0",
    "langchain-tests>=0.3.0",
]
lint = ["ruff>=0.6.0"]
typing = ["mypy>=1.10.0", "langchain-core>=0.3.0"]
test_integration = []

[tool.hatch.build.targets.wheel]
packages = ["langchain_zerogpu"]

[tool.hatch.build.targets.sdist]
include = [
    "/langchain_zerogpu",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "compile: marks tests as compile-only smoke checks",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "D"]
ignore = ["D100", "D104", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = false
exclude = ["tests/"]
